[gd_scene load_steps=21 format=2]

[ext_resource path="res://world/platform_generator.gd" type="Script" id=1]
[ext_resource path="res://world/platform09.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/world.gd" type="Script" id=3]
[ext_resource path="res://world/sanity_manager.gd" type="Script" id=4]
[ext_resource path="res://audio/music_manager.tscn" type="PackedScene" id=5]
[ext_resource path="res://shaders/insanity_shader.tscn" type="PackedScene" id=6]
[ext_resource path="res://world/ladder_generator.gd" type="Script" id=7]
[ext_resource path="res://world/platform03.tscn" type="PackedScene" id=8]
[ext_resource path="res://world/platform05.tscn" type="PackedScene" id=9]
[ext_resource path="res://world/platform08.tscn" type="PackedScene" id=10]
[ext_resource path="res://world/platform10.tscn" type="PackedScene" id=11]
[ext_resource path="res://world/platform01.tscn" type="PackedScene" id=12]
[ext_resource path="res://world/platform04.tscn" type="PackedScene" id=13]
[ext_resource path="res://world/platform06.tscn" type="PackedScene" id=14]
[ext_resource path="res://world/platform07.tscn" type="PackedScene" id=15]
[ext_resource path="res://world/platform02.tscn" type="PackedScene" id=16]
[ext_resource path="res://world/ladder02.tscn" type="PackedScene" id=17]
[ext_resource path="res://world/ladder03.tscn" type="PackedScene" id=18]
[ext_resource path="res://world/ladder01.tscn" type="PackedScene" id=19]
[ext_resource path="res://background/scrolling_background.tscn" type="PackedScene" id=20]

[node name="world" type="Node2D"]
script = ExtResource( 3 )

[node name="scrolling_background" parent="." instance=ExtResource( 20 )]
position = Vector2( 960, 540 )

[node name="platform_generator" type="Node2D" parent="."]
script = ExtResource( 1 )
platform_bases = [ ExtResource( 12 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 2 ), ExtResource( 11 ) ]

[node name="ladder_generator" type="Node2D" parent="."]
script = ExtResource( 7 )
ladder_bases = [ ExtResource( 19 ), ExtResource( 17 ), ExtResource( 18 ) ]

[node name="sanity_manager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="music_manager" parent="." instance=ExtResource( 5 )]

[node name="insanity_shader" parent="." instance=ExtResource( 6 )]
light_mask = 524288

[editable path="scrolling_background"]

[editable path="insanity_shader"]
